<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World!</string>
	<string name="app_name">零售管理系统</string>
	<string name="tobaccoManage_name">烟草管理</string>
	<string name="addOrder_name">增加订单</string>
	<string name="queryOrder_name">订单管理</string>
	<!-- orderUI -->
	<string name="brandCode_name">商品名称</string>
	<string name="brandCount_name">商品数量</string>
	<string name="format_name">商品规格</string>
	<string name="packet_name">包</string>
	<string name="item_name">条</string>
	<string name="price_name">商品单价</string>
	<string name="amount_name">商品金额</string>
	<string name="unit_name">机构名称 </string>
	<string name="vip_name">商品折扣</string>
	<string name="date_name">订单日期:</string>
	<string name="orderType_name">订单类型:</string>
	<string name="preOrder_name">预订单</string>
	<string name="order_name">订单</string>
	<string name="desc_name">备注:</string>
	<string name="add_name">+添加</string>
	<string name="total_name">总金额:</string>
	
	<!-- queryOrderUI -->
	<string name="detailInfo_name">详细信息</string>
	<string name="user2_name">操作人员</string>
	<string name="status_name">订单状态</string>
	<string name="okBtn_name">提交</string>
	<string name="cancelBtn_name">取消</string>
	<string name="homePage_name">首页</string>
	<string name="lastPage_name">上页</string>
	<string name="nextPage_name">下页</string>
	<string name="bottomPage_name">尾页</string>
	<string name="back_name">返回</string>
	<string name="search_name">搜索</string>
	<string name="curPage_name">当前页:</string>

	<string name="startDate_name">开始时间</string>
	<string name="endDate_name">结束时间</string>
	<string name="orderNumber_name">订单单号:</string>
	<string name="orderNumber2_name">单号</string>
	<string name="brandCode2_name">名称</string>
	<string name="brandCount2_name">数量</string>
	<string name="format2_name">规格</string>
	<string name="vip2_name">折扣</string>
	<string name="agency2_name">单位</string>
	<string name="status2_name">状态</string>
	<string name="date2_name">日期</string>
	<string name="amount2_name">金额</string>
	<string name="action_name">是否到货</string>
	<string name="desc2_name">备注</string>
	<string name="price2_name">单价</string>
	<!-- menuUI -->
	
	<string name="editOrder_name">编辑订单</string>
	<string name="delOrder_name">删除订单</string>
	<string name="recieveOrder_name">确认收货</string>
	<!-- queryTobaccoUI -->
	<string name="orderPrice1_name">进货价/包</string>
	<string name="orderPrice2_name">进货价/条</string>
	<string name="salePrice1_name">零售价/包</string>
	<string name="salePrice2_name">零售价/条</string>
	<string name="manufactory_name">厂家</string>
	<!-- dimen -->
	<dimen name="labelWidth">80px</dimen>

</resources>