<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/Linears"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="horizontal" android:layout_gravity="center">
		<ScrollView android:id="@+id/queryScrollView"
			android:layout_width="140px" android:layout_height="fill_parent">
			<LinearLayout android:id="@+id/searchLinearLayout"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:orientation="vertical">
				<Spinner android:id="@+id/Spinner01" android:layout_width="130px"
					android:layout_height="wrap_content"></Spinner>
				<Spinner android:id="@+id/Spinner02" android:layout_width="130px"
					android:layout_height="wrap_content"></Spinner>
				<EditText android:id="@+id/startDateText" android:text="@string/startDate_name"
					android:layout_width="130px" android:editable="false"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<EditText android:id="@+id/endDateText" android:text="@string/endDate_name"
					android:layout_width="130px" android:editable="false"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<EditText android:id="@+id/queryText" android:layout_width="130px"
					android:layout_height="wrap_content" android:maxLines="1"></EditText>
				<LinearLayout android:id="@+id/LinearForButton"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:orientation="horizontal" android:gravity="center">
					<Button android:text="@string/search_name" android:id="@+id/okButton"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="left"></Button>
					<Button android:text="@string/back_name" android:id="@+id/backBtn"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:layout_gravity="right"></Button>
				</LinearLayout>
			</LinearLayout>
		</ScrollView>
		<LinearLayout android:id="@+id/LinearRight"
			android:layout_width="wrap_content" android:layout_height="fill_parent"
			android:orientation="vertical">
			<TableLayout android:id="@+id/actionsTableLayout"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TableRow android:id="@+id/actionsTableRow"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/item1" android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:width="20dip"></TextView>
					<TextView android:id="@+id/orderItem"
						android:layout_height="wrap_content" android:text="@string/orderNumber2_name"
						android:textSize="14dip" android:width="50dip"
						android:layout_width="wrap_content"></TextView>
					<TextView android:id="@+id/nameItem"
						android:layout_height="wrap_content" android:text="@string/brandCode2_name"
						android:textSize="14dip" android:width="50dip"
						android:layout_width="wrap_content"></TextView>
					<TextView android:id="@+id/countItem" android:text="@string/brandCount2_name"
						android:textSize="14dip" android:width="40dip"
						android:layout_width="wrap_content" android:layout_height="fill_parent"></TextView>
					<TextView android:id="@+id/amountItem"
						android:layout_height="wrap_content" android:text="@string/amount2_name"
						android:width="40dip" android:textSize="14dip"
						android:layout_width="wrap_content"></TextView>
					<TextView android:id="@+id/formatItem"
						android:layout_height="wrap_content" android:text="@string/format2_name"
						android:width="40dip" android:textSize="14dip"
						android:layout_marginLeft="10px" android:layout_width="wrap_content"></TextView>
					<TextView android:id="@+id/vipItem" android:layout_height="wrap_content"
						android:text="@string/vip2_name" android:width="40dip"
						android:textSize="14dip" android:layout_width="wrap_content"></TextView>
					<TextView android:id="@+id/statusItem"
						android:layout_height="wrap_content" android:text="@string/status2_name"
						android:width="50dip" android:textSize="14dip"
						android:layout_width="wrap_content"></TextView>
					<TextView android:id="@+id/dateItem"
						android:layout_height="wrap_content" android:text="@string/date2_name"
						android:width="100dip" android:textSize="14dip"
						android:layout_marginLeft="10px" android:layout_width="wrap_content"></TextView>
					<TextView android:id="@+id/agencyItem"
						android:layout_height="wrap_content" android:text="@string/agency2_name"
						android:width="100dip" android:textSize="14dip"
						android:layout_width="wrap_content"></TextView>
					<TextView android:id="@+id/actionItem"
						android:layout_height="wrap_content" android:text="@string/action_name"
						android:width="70dip" android:textSize="14dip"
						android:layout_width="wrap_content"></TextView>
				</TableRow>
			</TableLayout>
			<FrameLayout android:id="@+id/FrameLayout01"
				android:layout_width="wrap_content" android:layout_height="100px"
				android:layout_weight="1">
				<ListView android:id="@+id/ListView01"
					android:layout_width="wrap_content" android:layout_height="fill_parent"
					android:drawSelectorOnTop="false">
				</ListView>
			</FrameLayout>
			<LinearLayout android:id="@+id/LinearForButtons"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:gravity="center">
				<Button android:text="@string/homePage_name" android:id="@+id/homePage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/lastPage_name" android:id="@+id/lastPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>

				<Button android:text="@string/nextPage_name" android:id="@+id/nextPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<Button android:text="@string/bottomPage_name" android:id="@+id/bottomPage"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>

			</LinearLayout>
			<LinearLayout android:id="@+id/LinearForButtons"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:gravity="center">
				<TextView android:text="@string/curPage_name"
					android:textSize="14dip" android:layout_width="wrap_content"
					android:layout_height="fill_parent"></TextView>
				<TextView android:id="@+id/currentPage" android:textSize="14dip"
					android:layout_width="wrap_content" android:layout_height="fill_parent"></TextView>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>