<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/LinearLayout01" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="horizontal"
	android:layout_gravity="center_vertical">
	<TextView android:id="@+id/item2" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:width="20dip"></TextView>
	<TextView android:id="@+id/nameItem" android:layout_height="wrap_content"
		android:text="@string/brandCode2_name" android:width="50dip"
		android:layout_width="wrap_content"></TextView>
	<TextView android:id="@+id/countItem" android:text="@string/brandCount2_name"
		android:width="40dip" android:layout_width="wrap_content"
		android:layout_height="fill_parent"></TextView>
	<TextView android:id="@+id/formatItem" android:layout_height="wrap_content"
		android:text="@string/format2_name" android:width="40dip"
		android:layout_marginLeft="10px" android:layout_width="wrap_content"></TextView>
	<TextView android:id="@+id/priceItem" android:text="@string/price2_name"
		android:width="40dip" android:layout_width="wrap_content"
		android:layout_height="fill_parent"></TextView>
	<TextView android:id="@+id/amount2Item" android:layout_height="wrap_content"
		android:text="@string/amount2_name" android:width="40dip"
		android:layout_width="wrap_content"></TextView>
</LinearLayout>