<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Button android:text="@string/tobaccoManage_name" android:id="@+id/tobaccoManageBtn"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginTop="100dip" android:layout_gravity="center"></Button>
	<Button android:text="@string/addOrder_name" android:id="@+id/addOrderBtn"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center"></Button>
	<Button android:text="@string/queryOrder_name" android:id="@+id/queryOrderBtn"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center"></Button>
	<Button android:text="@string/back_name" android:id="@+id/returnBtn"
		android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dip"
		android:layout_gravity="right"></Button>
</LinearLayout>
